# memo

./: Makefile  README.md  api.py  pyproject.toml
.github/workflows/: deploy.yml  lint-test.yml
docker/: Dockerfile  docker-compose.local.yml  docker-compose.yml
src/: log.py  main.py
src/api/: app.py  dependencies.py  middleware.py  schemas.py  validators.py
src/api/routes/: memos.py  search.py
src/clients/telegram_client/: .env.example  bot.py  client.py  config.py
src/clients/telegram_client/docker/: Dockerfile
src/clients/telegram_client/processors/: html_processor.py
src/clients/telegram_client/templates/: delete_response.html  search_response.html
src/config/: .env.example  settings.py
src/core/: context.py  exceptions.py  log.py  models.py
src/core/processors/: audio.py  text.py
src/core/services/: memo.py  search.py
src/infrastructure/db/: base.py  local_storage.py
src/infrastructure/summarization/: base.py  claude_summarizer.py
src/infrastructure/transcription/: base.py  openai_transcriber.py
src/infrastructure/vector_db/: base.py  pinecone_vector_storage.py
src/infrastructure/vectorization/: base.py  open_ai_vectorizer.py
tests/: conftest.py
tests/api_tests/: test_memos.py  test_search.py
tests/test_infrastructure/: test_transcription.py  test_vector_storage.py
tests/test_services/: test_memo_service.py  test_search_engine.py
tests/test_telegram_handlers/: delete_memo.py
