[project]
authors = [
    {name = "evgenii.basmov", email = "coykto@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "pinecone<6.0.0,>=5.4.2",
    "openai<2.0.0,>=1.59.6",
    "requests<3.0.0,>=2.32.3",
    "python-telegram-bot<22.0,>=21.10",
    "jinja2<4.0.0,>=3.1.5",
    "anthropic<1.0.0,>=0.42.0",
    "fastapi<1.0.0,>=0.115.6",
    "uvicorn<1.0.0,>=0.34.0",
    "python-multipart<1.0.0,>=0.0.20",
    "httpx<1.0.0,>=0.28.1",
    "pydantic-settings<3.0.0,>=2.7.1",
    "prometheus-fastapi-instrumentator<8.0.0,>=7.0.2",
    "tenacity<10.0.0,>=9.0.0",
    "pytest-asyncio<1.0.0,>=0.25.3",
    "pydantic==2.9",
    "filetype>=1.2.0",
]
name = "memo"
version = "0.1.0"
description = "Voice Memo App"
readme = "README.md"
package-mode = false

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.9.1",
    "isort<6.0.0,>=5.13.2",
    "black<25.0.0,>=24.10.0",
    "pytest<9.0.0,>=8.3.4",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
